<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item18carto"
            android:textAlignment="center"
            android:textColor="#0d8dc9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infosPatient"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="#767879"
            android:textSize="25sp"
            tools:text="Infos patient" />

        <!--<ImageView
            android:id="@+id/cartographieItem18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="#FFFFFFFF"
            tools:ignore="ContentDescription" /> -->

        <gscop.mfm_application.Dessin_carto18
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dessin_carto18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#FFFFFFFF">

        <Button
            android:id="@+id/boutonRecommencer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9bc3f1"
            android:layout_marginStart="50dp"
            android:ems="8"
            android:text="@string/restart"
            android:textColor="#055174"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/boutonValider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:background="#9bc3f1"
            android:ems="8"
            android:text="@string/valid"
            android:textColor="#055174"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/exit_button"
            android:contentDescription="@string/imageboutonquitter" />
    </LinearLayout>

</RelativeLayout>