<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/infosPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textColor="#767879"
                android:textSize="25sp"
                tools:text="Infos patient" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/exit_button" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item22carto"
            android:textAlignment="center"
            android:textColor="#0d8dc9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cartographieItem22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="#FFFFFFFF"
            android:contentDescription="@string/imageboutonquitter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boutonRecommencer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9bc3f1"
            android:ems="8"
            android:text="@string/restart"
            android:textColor="#055174"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/boutonValider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:background="#9bc3f1"
            android:ems="8"
            android:text="@string/valid"
            android:textColor="#055174"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>