<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/PatientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="#767879"
            android:textSize="25sp"
            tools:text="Nom et prénom du patient" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/exit_button" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/choiceExercise"
        android:textAlignment="center"
        android:textColor="#0d8dc9"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonitem18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="#caddf4"
            android:text="@string/item18"
            android:textColor="#055174"
            android:textSize="60sp" />

        <Button
            android:id="@+id/buttonitem19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="#caddf4"
            android:text="item19"
            android:textColor="#055174"
            android:textSize="60sp" />

        <Button
            android:id="@+id/buttonitem22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="#caddf4"
            android:text="@string/item22"
            android:textColor="#055174"
            android:textSize="60sp" />
    </LinearLayout>

</LinearLayout>