<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/PatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:textColor="#767879"
        android:textSize="30sp"
        tools:text="Identifiant du patient" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/item18"
        android:textAlignment="center"
        android:textColor="#0d8dc9"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textMandatory"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCotationTablet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="12"
            android:text="Cotation Thérapeute: "
            android:textColor="#0d8dc9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupCotationTablet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton0Tablet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton1Tablet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton2Tablet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton3Tablet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />


        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/myx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCotationTablette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="12"
            android:text="Cotation Tablette (automatique):"
            android:textColor="#0d8dc9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupCotationTabletAutomatique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCotationAutomatiquet0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonCotationAutomatiquet1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonCotationAutomatiquet2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonCotationAutomatiquet3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:textColor="#7e8183"
                android:textSize="25sp"
                android:textStyle="bold" />


        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tellwaytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text=" Le numéro de trace est: : "
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/compcotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="12"
            android:text="Justifier la cotation 2 (ex.: compensation du tronc)"
            android:textColor="#0d8dc9"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

        <EditText
            android:id="@+id/editTextJust"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#c2d6ed"
            android:inputType="text"
            android:lines="4"
            android:maxLength="200"
            android:scrollbars="horizontal"
            android:hint="@string/commentaire_libre"
            tools:ignore="LabelFor,TextFields" />





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/comments"
        android:textAlignment="center"
        android:textColor="#0d8dc9"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextComments"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#c2d6ed"
        android:inputType="text"
        android:lines="4"
        android:maxLength="200"
        android:scrollbars="horizontal"
        android:hint="@string/commentaire_libre"
        tools:ignore="LabelFor,TextFields" />
    <Button
        android:id="@+id/buttonDessin_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#9bc3f1"
        android:ems="8"
        android:text="VOIR dessin_18"
        android:textColor="#055174"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="#9bc3f1"
        android:ems="8"
        android:text="@string/save"
        android:textColor="#055174"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textStateSaving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#055174"
        android:textSize="30sp"
        tools:text="Infos état enregistrement" />

    <ProgressBar
        android:id="@+id/enregistBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progress="20"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress"/>
</LinearLayout>