<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gscop.mfm_application.ouverture_appli"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="MESURE de FONCTION MOTRICE \n dans les maladies neuromusculaires \n MFM "
        android:textColor="#0d8dc9"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Protocole de validation MFM - Tablette"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="Identifiant patient : "
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Ident"
            android:inputType="textPersonName"
            android:lines="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLength="6"
            tools:ignore="InefficientWeight" />

    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/surname"
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/surname2"
            android:inputType="textPersonName"
            android:lines="2"
            android:maxLength="30" />

    </LinearLayout>
    -->
    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mandatory"
            android:textColor="#f2053c"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texteBirthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/birthdate"
            android:textColor="#0d8dc9"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="jour"
            android:inputType="textPersonName"
            android:lines="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLength="2"
            tools:ignore="InefficientWeight" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint=" / "
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/birthmonth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="mois"
            android:inputType="textPersonName"
            android:lines="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLength="2"
            tools:ignore="InefficientWeight" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint=" / "
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/birthyear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="année"
            android:inputType="textPersonName"
            android:lines="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLength="4"
            tools:ignore="InefficientWeight" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <!--
        <Button
            android:id="@+id/buttonerase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9bc3f1"
            android:text="@string/erase"
            android:textColor="#055174"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />
          -->


        <Button
            android:id="@+id/boutonPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#9bc3f1"
            android:text="Patients"
            android:textColor="#055174"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/boutonvalider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_weight="1"
            android:background="#9bc3f1"
            android:text="@string/valid"
            android:textColor="#055174"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />



    </LinearLayout>

   <!--
    <Button
        android:id="@+id/boutonPatient"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#9bc3f1"
        android:text="Patients"
        android:textColor="#055174"
        android:textSize="30sp"
        tools:ignore="ButtonStyle" />
        -->

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:background="@drawable/exit_button" />

</LinearLayout>
